tests/vendor/valid/simple/assignment_lowest_precedence.c
//expect 1
//tags: simple, binary, assignment, precedence, variables
int main() {
    int a;
    a = 0 || 5;
    return a;
}