tests/vendor/invalid/semantics/continue_not_in_loop.c
//tags: simple, loop
int main() {
    {
        int a;
        continue;
    }
    return 0;
}